crates/styx-tree/src/snapshots/styx_tree__diagnostic__tests__duplicate_key_diagnostic.snap
---
source: crates/styx-tree/src/diagnostic.rs
expression: stripped
---
Error: duplicate key
   ╭─[ test.styx:2:1 ]
   │
 1 │ a 1
   │ ┬  
   │ ╰── first defined here
 2 │ a 2
   │ ┬  
   │ ╰── duplicate key
   │ 
   │ Help: each key must appear only once in an object
───╯
